Fixed layout on mobile

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap'); 
+@import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
 
 * {
   margin: 0;
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  font-family: 'Press Start 2P', sans-serif;
+  font-family: "Press Start 2P", sans-serif;
   color: #eee;
   background-color: #222;
   /* background-color: #60b347; */
@@ -118,44 +118,52 @@ h1 {
   margin-bottom: 2rem;
 }
 
-@media(max-width:360px) {
-  .again{
-    padding: 0.2rem 0.2rem;
-  }
-  h1{
+@media only screen and (max-width: 720px) {
+  h1 {
     font-size: 2rem;
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    top: 52%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  }
+
+  .btn {
+    font-size: 1rem;
+    padding: 1rem 1.5rem;
+  }
+
+  .number {
+    font-size: 3rem;
+    width: 7.5rem;
+    padding: 1.5rem 0rem;
+  }
+  .left {
+    width: 26rem;
+  }
+
+  .right {
+    width: 26rem;
+    font-size: 1rem;
+  }
+  .guess {
+    border: 2px solid #eee;
+    font-size: 2.5rem;
+    padding: 1.25rem;
+    width: 12.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .message {
+    margin-bottom: 4rem;
+    height: 1.5rem;
+  }
+  main {
+    height: 32.5rem;
   }
 }
-
-@media (min-width: 360px) and (max-width:860px){
-  .btn.again{
-    padding: 0.5re 0.5rem;
-  }
-  h1{
-    font-size: 2rem;
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    top: 52%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-}
-
 
 /* Disable controls on number input type */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
-input[type=number]{
-    -moz-appearance: textfield;
+input[type="number"] {
+  -moz-appearance: textfield;
 }
